[metadata]
name = CecogAnalyzer
author = Michael Held
author_email = held@cellcognition.org
license = LGPL
url = http://www.cellcognition.org
download_url = http://www.cellcognition.org/download
maintainer = Christoph Sommer
maintainer-email = christoph.sommer@imba.oeaw.ac.at
version = 1.3.0
provides = cecog
description = ''
long_description = ''
